Map don't work without concrete (#1228)
* Map don't work without concrete

Fixes:
* aliasing between nested arrays of UtHashMap and its fields
* unsat for get operation from Map
* Fixes for type system and fallbacks in it